k8s/pinecone/pinecone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinecone
  namespace: llama
  labels:
    app: pinecone
spec:
  ports:
  - port: 6333
    targetPort: 6333
    name: api
  - port: 6334
    targetPort: 6334
    name: grpc
  selector:
    app: pinecone
  type: ClusterIP
